<resources>
    <string name="app_name">pretty_great_message_board</string>
    <string name="userpic">userpic</string>
    <string name="input_username">請輸入名稱</string>
    <string name="button_send_msg">好ㄌ送出！</string>
    <string name="button_cancel">取消</string>
    <string name="input_title">請輸入標題</string>
    <string name="input_content">請輸入內容</string>
    <string name="switch_anonymous">匿名發文</string>
    <string name="button_addMessage">新增留言！</string>
    <string name="tv_content">[ Content ]</string>
    <string name="tv_timestamp">[ timestamp ]</string>
    <string name="errorText">資料正常。</string>
    <string name="textView3">TextView</string>
</resources>